登入頁 載入header檔 修改
header 漢堡堡 範圍修正

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -43,17 +43,41 @@ header{
     width: 100%;
     vertical-align: middle;
 }
-/* 漢堡選單 */
+/* 漢堡選單 (舊)*/
+// .headerContain .hamburger{
+//     width: 30px;
+//     height: 2px;
+//     margin: auto;
+//     /* background-color: #000; */
+//     border: 1px #394897 solid;
+//     border-radius: 5px;
+//     box-shadow: 0px 10px 0px #394897,
+//                 0px -10px 0px #394897;
+//     cursor: pointer;
+// }
+/* 漢堡選單 (新) */
 .headerContain .hamburger{
-    width: 30px;
-    height: 2px;
-    margin: auto;
-    /* background-color: #000; */
-    border: 1px #394897 solid;
-    border-radius: 5px;
-    box-shadow: 0px 10px 0px #394897,
-                0px -10px 0px #394897;
+    width: 40px;
+    height: 45px;
     cursor: pointer;
+    position: relative;
+    &::after{
+        //  偽類 定位在原生物件上(.hamburger)
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        position: absolute;
+        content: '';
+        width: 30px;
+        height: 2px;
+        margin: auto;
+        /* background-color: #000; */
+        border: 1px #394897 solid;
+        border-radius: 5px;
+        box-shadow: 0px 10px 0px #394897,
+                    0px -10px 0px #394897;
+    }
 }
 /* ------藝廊pointer------ */
 .headerContain .mainMenu ul li label{
