--- a/sass/page/_accountManagement.scss
+++ b/sass/page/_accountManagement.scss
@@ -27,26 +27,48 @@
 
 */
 
-.accountManagement_bouncing main{
+.accountManagement_bouncing main {
     margin-top: 1em;
     padding-left: 1em;
     line-height: 2;
-    border-left: 3px solid #999;
-    color: #999;
+    border-left: 3px solid #141414;
+    color: #141414;
 }
 
+
 /* input */
-.accountManagement_bouncing main .changeValue{
+
+.accountManagement_bouncing main .changeValue {
     border: none;
-    border-radius: 4px;
+    border-radius: 200px;
     font-size: inherit;
     font-family: inherit;
     color: inherit;
     background: inherit;
+    /* display: block;
+    font-size: 1em;
+    border-radius: 200px;
+    /* -webkit-box-sizing: border-box; */
+    box-sizing: border-box;
+    padding: 0.5em 1em;
+    border: none;
+    /* -webkit-box-shadow: -1px -1px 2px 0px #ffffff inset, 1px 1px 3px 0px #aaaaaaaa inset; */
+    box-shadow: -1px -1px 2px 0px #ffffff inset, 1px 1px 3px 0px #aaaaaaaa inset;
+    margin: 0px 0px 20px 0px;
+    /* width: 80%; */
+    line-height: 2em;
+    background-color: transparent;
 }
 
+.accountManagement_bouncing main .changeValue:focus {
+    outline: none;
+    box-shadow: -2px -2px 3px 3px #ffffff inset, 2px 2px 5px 1px #aaaaaaaa inset;
+}
+
+
 /* 問號 */
-.accountManagement_bouncing main p .fa-question{
+
+.accountManagement_bouncing main p .fa-question {
     font-size: 1px;
     padding: 4px;
     border: 1px solid #999;
