--- a/sass/page/_notice.scss
+++ b/sass/page/_notice.scss
@@ -1,95 +1,122 @@
 /* notice 鈴鐺通知按紐 */
-.notice{
-    width: 50px; height: 50px;
+
+.notice {
+    width: 50px;
+    height: 50px;
     background: #eee;
     border-radius: 50%;
-    
+    background-color: #ffffff50;
+    box-shadow: 0.1em 0.5em 0.5em #252b3020;
+    box-shadow: 0.1em 0.5em 0.5em #252b3020;
+    border: 1px solid #94969b50;
+    border-right: 1px solid #55595e20;
+    border-bottom: 1px solid #55595e20;
+    border-left: 1px solid #ffffff30;
+    backdrop-filter: blur(0.5em);
     display: flex;
     justify-content: center;
     align-items: center;
-    
     cursor: pointer;
     transition: all .1s ease;
     position: fixed;
     top: 10px;
     right: 80px;
     z-index: 10;
-
 }
-.notice:hover{
+
+.notice:hover {
     filter: brightness(0.9);
 }
-  /* 通知紅點 */
-.notice_dot{
-    width: 24px; height: 24px;
+
+
+/* 通知紅點 */
+
+.notice_dot {
+    width: 24px;
+    height: 24px;
     background: red;
     border-radius: 50%;
-    
     position: absolute;
-    top: -4px; right: -4px; 
-    
+    top: -4px;
+    right: -4px;
     text-align: center;
 }
-.notice_dotNumber{
-    color: #fff; font-size: 12px;
-    
+
+.notice_dotNumber {
+    color: #fff;
+    font-size: 12px;
     line-height: 24px;
 }
 
-  /* 通知欄位 */
-.noticeContain{
+
+/* 通知欄位 */
+
+.noticeContain {
     width: 50%;
     background: #eee;
     border-radius: 4px;
     padding: 10px 10px 1em;
-    
     display: none;
-
     position: absolute;
     top: 65px;
     right: 70px;
     z-index: 10;
 }
-.noticeContain h3{
+
+.noticeContain h3 {
     font-size: 18px;
     line-height: 2;
 }
-.noticeContain_outsideBox{
+
+.noticeContain_outsideBox {
     margin-top: 10px;
 }
-  /* 通知欄位中的 未讀欄位 */
-.noticeContain_unread{
+
+
+/* 通知欄位中的 未讀欄位 */
+
+.noticeContain_unread {
     display: none;
 }
-  /* 通知欄位 的訊息 */
-.noticeContain_message{
+
+
+/* 通知欄位 的訊息 */
+
+.noticeContain_message {
     min-height: 3em;
     border-radius: 4px;
     padding: 2px 10px;
     cursor: pointer;
 }
-.noticeContain_message:hover{
+
+.noticeContain_message:hover {
     background: #DCDCDC;
 }
-  /* 通知欄位 的按鈕 */
-.noticeContain_button{
-    background: #6c757d; color: #fff; font-size: 14px;
-    border-radius: 4px; border: none;
+
+
+/* 通知欄位 的按鈕 */
+
+.noticeContain_button {
+    background: #6c757d;
+    color: #fff;
+    font-size: 14px;
+    border-radius: 4px;
+    border: none;
     padding: 8px;
-    
     cursor: pointer;
     transition: all .3s ease;
 }
-.noticeContain_button:hover{
+
+.noticeContain_button:hover {
     filter: brightness(0.8);
 }
 
-.button＿all{
+.button＿all {
     background: #0D6EFD;
 }
 
-@media(min-width:769px){
-    .noticeContain{
+@media(min-width:769px) {
+    .noticeContain {
         width: 16%;
     }
 }
