--- a/sass/basic/uiSet.scss
+++ b/sass/basic/uiSet.scss
@@ -68,47 +68,41 @@ body{
 }
 /* 主標文字大小 */
 h1{
-<<<<<<< HEAD
     /* font-size: 100px; */
     font-size: 6.25em;
     line-height: 3;
-=======
-    /* font-size: 70px; */
-    font-size: 4.375em;
-    line-height: 2;
->>>>>>> 9b83784433d434dd397f2705f6d99a54d2d08774
 }
 /* 副標文字大小 */
 h2{
-    /* font-size: 31.25px; */
-    font-size: 1.953em;
+    /* font-size: 40px; */
+    font-size: 2.5em;
     line-height: 3;
 	letter-spacing:2px;
 }
 /* 內文標題大小 */
 h3{
-    /* font-size: 25px; */
-    font-size: 1.563em;
-    line-height: 2;
+    /* font-size: 30px; */
+    font-size: 1.875em;
+    line-height: 3;
 	letter-spacing:2px;
 }
 /* 內文副標大小 */
 h4{
-    /* font-size: 20px; */
-    font-size: 1.25em;
-    line-height: 1.5;
+    /* font-size: 24px; */
+    font-size: 1.5em;
+    line-height: 2;
 	letter-spacing:2px;
 }
 /* 內文文字大小 */
 p{  
-    /* font-size: 16px; */
-    font-size:1em;
+    /* font-size: 20px; */
+    font-size:1.25em;
     line-height: 1.3;
 	letter-spacing:3px;
 }
 p.small{  
-    /* font-size: 12.8px; */
-    font-size:0.8em;
+    /* font-size: 13px; */
+    font-size:0.875em;
     line-height: 1.5;
 	letter-spacing:2px;
 }
@@ -117,14 +111,8 @@ p.small{
     color: #141414;
     font-size: 1em;
     background-color: #FFD60A;
-<<<<<<< HEAD
     font-weight: 600;
     padding: 10px 30px;
-=======
-    /* font-weight: 600; */
-    // padding: 10px 30px;修改前
-    padding: 5px 20px;
->>>>>>> 9b83784433d434dd397f2705f6d99a54d2d08774
     border-radius: 200px;
     border: none;
 }
@@ -133,36 +121,10 @@ p.small{
     color: #141414;
     font-size: 1em;
     background-color: #FFD60A;
-<<<<<<< HEAD
     font-weight: 600;
     padding: 10px 30px;
     border-radius: 5px;
     border: none;
-=======
-    /* font-weight: 600; */
-    padding: 5px 20px;
-    border-radius: 5px;
-    border: 2px solid #FFD60A;
-    transition: .3s;
-}
-/* 空白橢圓按鈕 */
-.whiteRound{
-    color: #141414;
-    font-size: 1em;
-    padding: 5px 20px;
-    border-radius: 200px;
-    border: 2px solid transparent;
-    transition: .3s;
-}
-/* 空白方形按鈕 */
-.whiteSquare{
-    color: #141414;
-    font-size: 1em;
-    padding: 5px 20px;
-    border-radius: 5px;
-    border: 2px solid transparent;
-    transition: .3s;
->>>>>>> 9b83784433d434dd397f2705f6d99a54d2d08774
 }
 /* 實心按鈕hover */
 .round:hover,.square:hover{
@@ -174,13 +136,8 @@ p.small{
     color: #141414;
     font-size: 1em;
     background-color: transparent;
-<<<<<<< HEAD
     font-weight: 600;
     padding: 10px 30px;
-=======
-    /* font-weight: 600; */
-    padding: 5px 20px;
->>>>>>> 9b83784433d434dd397f2705f6d99a54d2d08774
     border-radius: 200px;
     border: 2px solid #FFD60A;
 }
@@ -189,13 +146,8 @@ p.small{
     color: #141414;
     font-size: 1em;
     background-color: transparent;
-<<<<<<< HEAD
     font-weight: 600;
     padding: 10px 30px;
-=======
-    /* font-weight: 600; */
-    padding: 5px 20px;
->>>>>>> 9b83784433d434dd397f2705f6d99a54d2d08774
     border-radius: 5px;
     border: 2px solid #FFD60A;
 }
@@ -205,77 +157,31 @@ p.small{
     background-color: #141414;
     border: 2px solid #141414;
 }
-<<<<<<< HEAD
 
-=======
-/* 90%外層 */
-.size{
-    max-width: 1200px;
-    width: 90%;
-}
-/* 置中 */
-.marginAuto{
-    margin: auto;
-}
-/* 消失 */
-.displayNone{
-    display: none;
-}
->>>>>>> 9b83784433d434dd397f2705f6d99a54d2d08774
 @media screen and (max-width:768px){
     /* 主標文字大小(手機) */
     h1{
         /* font-size: 70px; */
         font-size: 4.375em;
     }
-    /* 副標文字大小 */
+    /* 副標文字大小(手機) */
     h2{
-        /* font-size: 31.25px; */
-        font-size: 1.953em;
+        /* font-size: 32px; */
+        font-size: 2em;
     }
-    /* 內文標題大小 */
+    /* 內文標題大小(手機) */
     h3{
-        /* font-size: 25px; */
+        /* font-size: 22.4px; */
         font-size: 1.4em;
     }
-    /* 內文副標大小 */
+    /* 內文副標大小(手機) */
     h4{
         /* font-size: 20px; */
         font-size: 1.25em;
     }
-    /* 內文文字大小 */
-    p{  
-        /* font-size: 16px; */
-        font-size:1em;
-        line-height: 1.3;
-        letter-spacing:3px;
+    /* 內文文字大小(手機) */
+    p{
+        /* font-size:18px; */
+        font-size: 1.125em;
     }
-<<<<<<< HEAD
 }
-=======
-    p.small{  
-        /* font-size: 12.8px; */
-        font-size:0.8em;
-        line-height: 1.5;
-        letter-spacing:2px;
-    }
-
-
-
-
-
-
-
-
-
-}
-// ======= input ==== //樣式
-// font-size: 1em;
-// border-radius: 200px;
-// box-sizing: border-box;
-// padding: 0.5em 1em;
-// border:none;
-// box-shadow: -1px -1px 2px 0px #ffffff inset,1px 1px 3px 0px #aaaaaaaa inset;
-// line-height: 2em;
-// background-color: transparent;
->>>>>>> 9b83784433d434dd397f2705f6d99a54d2d08774
