--- a/sass/page/galleryDoor.scss
+++ b/sass/page/galleryDoor.scss
@@ -1,4 +1,3 @@
-//galleryDoorMain > stage > size > ring > door
 //藝廊入口 Body
 .galleryDoorWrap{
     //隱藏超出畫面的物件(卷軸)
@@ -8,8 +7,8 @@
     .galleryDoorMain{
         position: relative;
         width: 100%;
-        height: 95vh;
-    
+        height: 90vh;
+        // background-color: #141414;
         // 3D效果
         %the3D{
             width:100%;
@@ -19,12 +18,13 @@
         }
         .stage{
             @extend %the3D;
+
             .size{
                 //定位父層galleryDoorMain
                 position: absolute;
                 perspective: 1000px;
-                width: 290px;
-                height: 500px;  
+                width: 300px;
+                height: 450px;  
                 left:50%;
                 top:50%;
                 transform:translate(-50%,-50%);
@@ -33,16 +33,40 @@
                     @extend %the3D;
                     //定位父層galleryDoorMain
                     position: absolute;
-
                     .door{
                         @extend %the3D;
                         //定位父層galleryDoorMain
                         position: absolute;
                         border-radius: 555em 555em 0 0;
                         overflow:hidden;
+                        -webkit-box-reflect:
+                        below 5px 
+                        -webkit-gradient(linear, left top, left bottom, from(transparent), 
+                        color-stop(0.5, transparent), 
+                        to(rgba(255, 255, 255, 0.5)));
+                        a{
+                            text-decoration: none;
+                            color: #141414;
+
+                            img{
+                                width: 100%;
+                                height: auto;
+                            }
+                            .text{
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+
+                                p{
+                                    font-size: 1.5em;
+                                    font-weight: 600;
+                                }
+                            }
+                        }
                     }
                 }
             }
         }
     }
 }
+
