--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -49,7 +49,9 @@
                     </ul>
             </nav>
             <div class="copyright">
-                    <p>@2022 Powered by 藝論 Right Reserved<br>本網站為緯育Tibame前端設計工程師班專題作業，本平台僅供學習、展示之用。</p>
+                <p>本網站為緯育TibaMe_前端設計工程師班第104期學員專題成果作品，本平台僅供學習、展示之用。<br>若有抵觸有關著作權，或有第三人主張侵害智慧財產權等情事，均由學員負法律上責任，緯育公司概不負責。<br>若有侵權疑慮，您可以私訊
+                <a href="https://www.facebook.com/TibaMe">緯育TibaMe</a>，後續會由專人協助處理。</p>
+                    
             </div>
         </section>
     </footer>
