--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -73,6 +73,10 @@ footer{
     padding: 2em 0;
     border-top: 1px solid #e7e7e7;
 }
+.footerContain .copyright a{
+    text-decoration: none;
+    color: #394897;
+}
 @media screen and (min-width:768px){
     .footerContain .socialContain .logo{
         width: 30px;
