--- a/html/layout/header.html
+++ b/html/layout/header.html
@@ -1,7 +1,7 @@
     <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="js/header.js"></script>
-    <header>
+    <header class="@@headerClass">
         <section class="headerContain">
             <div class="logoContain">
                 <div class="logo">
