1.button font-family修改 2.首頁文章報紙圖

--- a/sass/basic/uiSet.scss
+++ b/sass/basic/uiSet.scss
@@ -2,9 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap');
 /* 網頁字體和背景顏色 */
 body{
-    /* font-family: 'Noto Sans TC', sans-serif; */
     font-family: 'Noto Serif TC', serif;
     color: #141414;
+}
+button{
+    font-family: 'Noto Serif TC', serif;
 }
 /* 主要的顏色 */
 .mainColor{
