--- a/sass/page/_articlePage.scss
+++ b/sass/page/_articlePage.scss
@@ -8,9 +8,9 @@
     box-sizing: border-box;
     margin:40px auto;
     background-color: #fbf7f3;
+    border: 1px solid #ccc;
     background-image: url("https://www.transparenttextures.com/patterns/natural-paper.png");
-    box-shadow: 0.1em 0.5em 0.5em #252b3020,
-                0.3em 0.6em 0.5em #252b3020;
+    box-shadow: inset 0 0 30px rgba(0,0,0,0.1), 1px 1px 3px rgba(0,0,0,0.2);
 }
 /* 所有a設定 */
 .articlePageContent{
