--- a/sass/page/_homePage.scss
+++ b/sass/page/_homePage.scss
@@ -364,6 +364,7 @@
     width: 90%;
     margin: auto;
     display: block;
+    
     background-color: #fbf7f3;
     border: 1px solid #ccc;
     background-image: url("https://www.transparenttextures.com/patterns/natural-paper.png");
@@ -371,15 +372,7 @@
     position: relative;
     z-index: 8;
 }
-
-
-// .homeNews .newsContain:before,
-// .homeNews .newsContain:after  {
-//     background-color: #fbf7f3;
-//     border: 1px solid #ccc;
-//     background-image: url("https://www.transparenttextures.com/patterns/natural-paper.png");
-//     box-shadow: inset 0 0 30px rgba(0,0,0,0.1), 1px 1px 3px rgba(0,0,0,0.2);
-// }
+// 報紙效果
 .homeNews .newsContain:before, .homeNews .newsContain:after  {
     content: "";
     position: absolute;
@@ -395,30 +388,21 @@
 .homeNews .newsContain:after  {
     transform: rotateZ(-2.5deg);
 }
-
-
-
-
-
-
-
-
-
-.homeNews .zigzag{
-    width: 90%;
-    margin: auto;
-    display: block;
-}
-.homeNews .zigzag img{
-    width: 100%;
-}
-.homeNews .newsContain h2{
-    text-align: center;
-    width: 90%;
-    margin: auto;
-    padding: 20px 0px 10px;
-    position: relative;
-}
+// .homeNews .zigzag{
+//     width: 90%;
+//     margin: auto;
+//     display: block;
+// }
+// .homeNews .zigzag img{
+//     width: 100%;
+// }
+// .homeNews .newsContain h2{
+//     text-align: center;
+//     width: 90%;
+//     margin: auto;
+//     padding: 20px 0px 10px;
+//     position: relative;
+// }
 .homeNews .newsContain h2:before{
     content: '';
     background-color: #d1d1d157;
