--- a/sass/basic/uiSet.scss
+++ b/sass/basic/uiSet.scss
@@ -7,6 +7,13 @@ body{
 }
 button{
     font-family: 'Noto Serif TC', serif;
+    cursor: pointer;
+}
+input{
+    font-family: 'Noto Serif TC', serif;
+}
+textarea{
+    font-family: 'Noto Serif TC', serif;
 }
 /* 主要的顏色 */
 .mainColor{
