--- a/sass/page/_articlePost.scss
+++ b/sass/page/_articlePost.scss
@@ -69,7 +69,7 @@
 }
 // 加圖區
 .articlePostContent .articleEdit label[for=articlePic]{
-    display: flex;
+    display: inline-block;
 }
 .articlePostContent .articleEdit label[for=articlePic] .selectPic{
     width: 400px;
@@ -95,15 +95,18 @@
     margin: 10px;
 }
 // 預覽區 //
+.articlePostContent .articlePreview h2{
+    padding-left:20px ;
+}
 .articlePostContent .articlePreview .page{
     width: 98%;
     padding: 20px;
     box-sizing: border-box;
     display: block;
     margin:0 auto 20px;
-    background-color: #fbf7f3; 
+    background-color: #fbf7f3;
     background-image: url("https://www.transparenttextures.com/patterns/natural-paper.png");
-    box-shadow: 0.1em 0.5em 0.5em #252b3020;
+    box-shadow: inset 0 0 30px rgba(0,0,0,0.1), 1px 1px 3px rgba(0,0,0,0.2);
 }
 .articlePostContent .articlePreview .item .pic{
     width: 100%;
